# pomerol

./: .clang-format  .clang-tidy  .cppcheck.supp.in  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  COPYRIGHT  Doxyfile.in  LICENSE  Makefile  Makefile.am  Makefile.backup  Makefile.in  NEWS  README  README.md  TODO  V2-NEWS.md  V2.0-ROADMAP.md  aclocal.m4  configure  configure.ac  doxygen.cfg  index.html  params.json  pomerol.lmod.in  pomerol.pc.in  pomerolConfig.cmake.in
.conda/: build.sh  recipe.yaml  (+1 more)
doc/: 1atom1band.nb  CMakeLists.txt  Doxyfile  Doxyfile.in  Lattice1.json  Lattice2.json  Lattice3.json  Lattice4Not.json  Lattice6.json  LatticeS.json  LatticeTest.json  VLALatticeGenerator.py  chi3cluster.py  eigen3.pc  gamma4.tex  gamma4convert.cpp  hdf5.pc  symmetry.tex  system.ini
doc/lattices/: Chain3.json  Chain4.json  L4Kondo.json  Lattice.json.simple  Lattice2.json  Lattice3.json  Lattice4Square.json  Lattice4VLA.json  Lattice5.json  Lattice6.json  Lattice7.json  LatticeP.json  LatticeS.json  newLattice2.Json
example/: CMakeLists.txt  README.md  example2site.cpp
include/: CMakeLists.txt  pomerol.h  pomerol.h.in  pomerol.hpp
include/mpi_dispatcher/: misc.hpp  mpi_dispatcher.hpp  mpi_skel.hpp
include/pomerol/: AmputatedVertex4Container.h  CMakeLists.txt  ChaseIndices.hpp  ComputableObject.h  ComputableObject.hpp  DensityMatrix.h  DensityMatrix.hpp  DensityMatrixPart.h  DensityMatrixPart.hpp  EnsembleAverage.h  EnsembleAverage.hpp  EnsembleAveragePart.h  FieldOperator.h  FieldOperatorContainer.h  FieldOperatorContainer.hpp  FieldOperatorPart.h  FourIndexObject.h  GFContainer.h  GFContainer.hpp  GreensFunction.h  GreensFunction.hpp  GreensFunctionPart.h  GreensFunctionPart.hpp  Hamiltonian.h  Hamiltonian.hpp  HamiltonianPart.h  HamiltonianPart.hpp  HilbertSpace.h  HilbertSpace.hpp  Index.h  Index.hpp  IndexClassification.h  IndexClassification.hpp  IndexContainer2.h  IndexContainer2.hpp  IndexContainer4.h  IndexContainer4.hpp  IndexHamiltonian.h  Lattice.h  LatticePresets.h  (+40 more)
include/pomerol/mpi_dispatcher/: mpi_skel.hpp
jsoncpp/: CMakeLists.txt  Makefile  Makefile.am  Makefile.backup  Makefile.in
jsoncpp/example/: Makefile  example.cpp  example.json
jsoncpp/src/: Makefile  Makefile.am  Makefile.backup  Makefile.in
mpi_dispatcher/: CMakeLists.txt  mpi_dispatcher.cpp
mpi_dispatcher/test/: CMakeLists.txt  mpi_basic_test.cpp
prog/: AROutput.cpp  CMakeLists.txt  DevelopersExample.cpp  HartmutDiag.cpp  Makefile.am  Makefile.in  OptionParser.h  anderson.cpp  anderson.cxx11.cpp  anderson_gftools.cpp  anderson_model.h  anderson_model.hpp  hubbard2d.cpp  hubbard2d_model.h  hubbard2d_model.hpp  main.cpp  quantum_model.cpp  quantum_model.h  quantum_model.hpp
src/: AmputatedVertex4.h  AmputatedVertex4Container.h  BitClassification.cpp  BitClassification.h  CCXpair.cpp  CCXpair.h  CCXpart.cpp  CCXpart.h  CMakeLists.txt  ComputableObject.h  ContainerTwoParticleGF.cpp  ContainerTwoParticleGF.h  DensityMatrix.cpp  DensityMatrix.h  DensityMatrixPart.cpp  DensityMatrixPart.h  Dumper.cpp  Dumper.h  FieldOperator.cpp  FieldOperator.h  FieldOperator.tmpl.h  FieldOperatorContainer.cpp  FieldOperatorContainer.h  FieldOperatorPart.cpp  FieldOperatorPart.h  FieldOperatorPart.tmpl.h  FieldOperators.cpp  FieldOperators.h  FourIndexObject.cpp  FourIndexObject.h  GFContainer.cpp  GFContainer.h  GreensFunction.cpp  GreensFunction.h  GreensFunctionPart.cpp  GreensFunctionPart.h  HDF5Storage.cpp  HDF5Storage.h  Hamiltonian.cpp  Hamiltonian.h  (+74 more)
src/mpi_dispatcher/: CMakeLists.txt  mpi_dispatcher.cpp
src/pomerol/: AmputatedVertex4.cpp  AmputatedVertex4Container.cpp  CMakeLists.txt  DensityMatrix.cpp  DensityMatrixPart.cpp  EnsembleAverage.cpp  EnsembleAveragePart.cpp  FieldOperator.cpp  FieldOperatorContainer.cpp  FieldOperatorPart.cpp  FourIndexObject.cpp  GFContainer.cpp  GreensFunction.cpp  GreensFunctionPart.cpp  HDF5Storage.cpp  Hamiltonian.cpp  HamiltonianPart.cpp  Index.cpp  IndexClassification.cpp  IndexHamiltonian.cpp  Lattice.cpp  LatticePresets.cpp  MatsubaraContainer.cpp  Misc.cpp  MonomialOperator.cpp  MonomialOperatorPart.cpp  Operator.cpp  OperatorPresets.cpp  StatesClassification.cpp  Susceptibility.cpp  SusceptibilityPart.cpp  Symmetrizer.cpp  Thermal.cpp  ThreePointSusceptibility.cpp  ThreePointSusceptibilityContainer.cpp  ThreePointSusceptibilityPart.cpp  TwoParticleGF.cpp  TwoParticleGFContainer.cpp  TwoParticleGFPart.cpp  Vertex4.cpp  (+1 more)
test/: 3PSusc1siteTest.cpp  3PSusc3siteTest.cpp  Anderson2PGFTest.cpp  AndersonComplexTest.cpp  AndersonTest.cpp  AndersonTest02.cpp  AndersonTest03.cpp  BroadcastTest.cpp  CCdagOperatorTest.cpp  CMakeLists.txt  EnsembleAverage1siteTest.cpp  FieldOperatorPartTest.cpp  FieldOperatorTest.cpp  GF1siteAnomalousTest.cpp  GF1siteTest.cpp  GF2siteTest.cpp  GF4siteTest.cpp  GF4siteTest_libcommute.cpp  GFContainerTest.cpp  HamiltonianBosonsTest.cpp  HamiltonianPartTest01.cpp  HamiltonianTest.cpp  IndexPermutationTest.cpp  MPIDispatcherTest.cpp  MonomialOperatorPartTest.cpp  NOperatorTest.cpp  OperatorTest.cpp  SingletTest.cpp  Susceptibility1siteTest.cpp  SusceptibilityTest.cpp  SzOperatorTest.cpp  TwoParticleGFContainerTest.cpp  Utility.h  Utility.hpp  Vertex4Test.cpp  broadcast.cpp  mpi_dispatcher_test.cpp  mpi_dispatcher_test_nomaster.cpp
test/catch2/: catch-pomerol.hpp  catch2-main.cpp
tests/: AndersonTest.cpp  AndersonTest02.cpp  CCdagOperatorTest.cpp  CMakeLists.txt  FieldOperatorPartTest.cpp  FieldOperatorTest.cpp  GF1siteTest.cpp  GF2siteTest.cpp  GF4siteTest.cpp  GFContainerTest.cpp  GreensFunctionTest.cpp  HamiltonianPartTest.cpp  HamiltonianPartTest01.cpp  HamiltonianPartTest02.cpp  HamiltonianTest.cpp  IndexPermutationTest.cpp  IndexTerm.cpp  IndexTermTest.cpp  MPIBasicTest.cpp  MPIDispatcherTest.cpp  MPITest.cpp  Makefile.am  Makefile.in  NOperatorTest.cpp  OperatorTest.cpp  SingletTest.cpp  SzOperatorTest.cpp  TwoParticleGFContainerTest.cpp  Vertex4ContainerTest.cpp  Vertex4Test.cpp  compile.sh  gamma4.cpp  green.cpp  green.json
tutorial/: CMakeLists.txt  README.md  example2site.cpp
(+997 files in other folders)
